fix: navbar spacing, form select values, form action, year input max and min

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,8 @@
   width: 80px;
 }
 
-.nb-position {
-  position: relative;
-  top: 100px;
+
+
+main {
+  margin-top: 100px;
 }
